# exercise

ULK/chap2/: demo.c  test.c
ULK/chap3/: demo.c  test.c
ULK/chap4/: main.c  test.c
ULK/chap5/: Makefile  main.c  test.c
ULK/utils/: utils.c  utils.h
asm/: cpuid.s
kernel/procfs/: procfs.c
kernel_projects/monitor_task/: Makefile
my_asio/: a.out  conditionally_enabled_event.hpp  conditionally_enabled_mutex.hpp  demo.cpp  epoll_reactor.hpp  epoll_reactor.ipp  error_code.hpp  eventfd_select_interrupter.hpp  eventfd_select_interrupter.ipp  execution_context.hpp  execution_context.ipp  noncopyable.hpp  null_event.hpp  object_pool.hpp  op_queue.hpp  posix_event.hpp  posix_mutex.hpp  posix_thread.hpp  posix_thread.ipp  reactor_op.hpp  scheduler.hpp  scheduler.ipp  scheduler_operation.hpp  scheduler_thread_info.hpp  scoped_lock.hpp  service_registry.hpp  thread_info_base.hpp  timer_queue_base.hpp  timer_queue_set.hpp
procfs/: .Module.symvers.cmd  .modules.order.cmd  .procfs.ko.cmd  .procfs.mod.cmd  .procfs.mod.o.cmd  .procfs.o.cmd  .procfs.o.d  procfs.c  procfs.ko  procfs.mod  procfs.mod.c
quan/: README.md  main.py  requirements.txt
quan/config/: config.yaml
quan/cpp/: CMakeLists.txt  build.sh
quan/cpp/include/: indicators.h
quan/cpp/src/: bindings.cpp  indicators.cpp
quantification/: INSTALL.md  README.md  example_usage.py  main.py  requirements.txt  run.py  test_installation.py
quantification/config/: config.yaml
quantification/src/: __init__.py
quantification/strategies/: simple_mean_reversion.py
wsb_asio/: .clangd  a.out  main  main.cpp
(+89 files in other folders)
